i have added a comment in the blog file

--- a/bruno/blog.html
+++ b/bruno/blog.html
@@ -180,6 +180,7 @@
                                         alt=""></a>
                             </div>
                             <!--main menu start-->
+                            <!-- hii i am  arush -->
                             <div class="main_menu menu_stye2 d-none d-lg-block">
                                 <nav>
                                     <ul class="d-flex">
